--- a/views/vehicles/index.liquid
+++ b/views/vehicles/index.liquid
@@ -1,23 +1,23 @@
 {% layout 'layout.liquid'%}
 {% block content %}
 <div>
-    <h2 class="display-6">All Examples</h2>
+    <h2 class="display-6">All Vehicles</h2>
     <div class="row">
-        {% for example in examples %}
+        {% for vehicle in vehicles %}
         <div class="card" style="width: 18rem;">
-            <h5 class="card-header">{{ example.title }}</h5>
+            <h5 class="card-header">{{ vehicle.title }}</h5>
             <div class="card-body">
                 <h5 class="card-title">
-                    Ready?: {{ example.ready }}
+                    Ready?: {{ vehicle.ready }}
                 </h5>
                 <p class="card-text">
-                    Body: {{ example.body }}
+                    Body: {{ vehicle.body }}
                 </p>
                 <p class="card-text">
-                    Amount: {{ example.amount }}
+                    Amount: {{ vehicle.amount }}
                 </p>
-                <a href="/examples/{{ example.id }}" class="btn btn-info">
-                    View {{ example.title }}
+                <a href="/vehicles/{{ vehicle.id }}" class="btn btn-info">
+                    View {{ vehicle.title }}
                 </a>
             </div>
         </div>
