--- a/views/vehicles/show.liquid
+++ b/views/vehicles/show.liquid
@@ -3,20 +3,20 @@
 <div class="container-md">
     <article>
         <h2>
-            {{ example.title }} -
-            {% if example.ready %}
+            {{ vehicle.title }} -
+            {% if vehicle.ready %}
             Ready
             {% else %}
             Not Ready
             {%endif%}
         </h2>
-        <h3>Amount: {{ example.amount }}</h3>
-        <h6>Body: {{ example.body }}</h6>
-        {% if example.owner == userId %}
+        <h3>Amount: {{ vehicle.amount }}</h3>
+        <h6>Body: {{ vehicle.body }}</h6>
+        {% if vehicle.owner == userId %}
         <div class="btn-group">
 
-            <a href="/examples/{{ example.id }}/edit" class="btn btn-primary">Edit</a>
-            <form action="/examples/{{ example.id }}?_method=DELETE" method="POST">
+            <a href="/vehicles/{{ vehicle.id }}/edit" class="btn btn-primary">Edit</a>
+            <form action="/vehicles/{{ vehicle.id }}?_method=DELETE" method="POST">
                 <input type="submit" value="Delete" class="btn btn-danger">
             </form>
         </div>
