updated nav bar

--- a/views/navbar.liquid
+++ b/views/navbar.liquid
@@ -12,11 +12,11 @@
             {% if loggedIn %}
                 <a href="/vehicles" class="nav-link text-light">View All</a>
                 <a href="/vehicles/new" class="nav-link text-light">New</a>
-                <a href="/vehicles/mine" class="nav-link text-light">My SAH Motors</a>
+                <a href="/vehicles/mine" class="nav-link text-light me-8">My SAH Motors</a>
                 <a href="/auth/logout" class="nav-link text-light">Log Out</a>
             {% else %}
-                <a href="/auth/signup" class="nav-link text-light">Sign Up</a>
-                <a href="/auth/login" class="nav-link text-light">Sign In</a>
+                <a href="/auth/signup" class="nav-link text-light me-3">Sign Up</a>
+                <a href="/auth/login" class="nav-link text-light me-3">Sign In</a>
             {% endif %}
         </div>
     </div>
