--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,7 +1,8 @@
-{% layout "layout.liquid" %}
+{% layout 'layout.liquid' %}
 {% block content %}
-
-    <h1>Welcome!</h1>
-
-
+    <div>
+        <h1>Welcome to the SAH Motors</h1>
+        <p></p>
+        <img src="https://i.imgur.com/Sdz8BS6.jpg" alt="Mustang photo" height="600px">
+    </div>
 {% endblock %}
