adding columns to layout

--- a/views/vehicles/show.liquid
+++ b/views/vehicles/show.liquid
@@ -3,15 +3,10 @@
 <div class="container-md">
     <article>
         <h2>
-            {{ vehicle.title }} -
-            {% if vehicle.ready %}
-            Ready
-            {% else %}
-            Not Ready
-            {%endif%}
+            {{ vehicle.year }} 
         </h2>
-        <h3>Amount: {{ vehicle.amount }}</h3>
-        <h6>Body: {{ vehicle.body }}</h6>
+        <h3>Make: {{ vehicle.make }}</h3>
+        <h3>Model: {{ vehicle.model }}</h3>
         {% if vehicle.owner == userId %}
         <div class="btn-group">
 
