--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -8,36 +8,46 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <!-- Link in my CSS -->
         <link rel="stylesheet" href="/styles.css" />
-        <title>Froot App</title>
+        <title>SAH Motors</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a href="/" class="navbar-brand">SAH Motors</a>
-                {% if loggedIn %}
-                    <a href="/vehicles/mine" class="nav-link text-warning me-3">Hello {{username}}</a>
-                {% endif %}
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="#">SAH Motors</a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collaps"
+                    data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                    >
                     <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    {% if loggedIn %}
-                        <a href="/vehicles" class="nav-link text-light me-3">All Vehicles</a>
-                        <a href="/vehicles/new" class="nav-link text-light me-3">New Vehicle</a>
-                        <a href="/users/logout" class="nav-link text-light me-3">Log Out</a>
-                    {% else %}
-                        <a href="/vehicles" class="nav-link text-light me-3">All Vehicles</a>
-                        <a href="/users/signup" class="nav-link text-light me-3">Sign Up</a>
-                        <a href="/users/login" class="nav-link text-light me-3">Log In</a>
-                    {% endif %}
-                </div>
+                    
+                    </button>
+
+
+
+
             </div>
-        </nav>
-        <main class="container-md">
-            {% block content %}
-                default content
-            {% endblock %}
-        </main>
+        </header>
+            <main class="my-5"></main>
+            <div class="container">
+                <div clss="row">
+                    <div class="col-md-7">
+                        <img src="https://i.imgur.com/Sdz8BS6.jpg" alt="Mustang Convertible Photo" class="img-fluid"/>
+                    </div>
+                    <div class="col-md-5">
+                        <h1 class="mt-5">SAH Motors</h1>
+                        <p class="mt-4"> Welcome to SAH Motors! Make your rental vehicel a part of your vacation experience!
+
+                        </p>
+                        
+                        </div>
+                </div>
+
         <!-- link in our bootstrap scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
