--- a/views/vehicles/index.liquid
+++ b/views/vehicles/index.liquid
@@ -1,27 +1,20 @@
-{% layout 'layout.liquid'%}
+{% layout 'layout.liquid' %}
 {% block content %}
-<div>
-    <h2 class="display-6">All Vehicles</h2>
-    <div class="row">
-        {% for vehicle in vehicles %}
-        <div class="card" style="width: 18rem;">
-            <h5 class="card-header">{{ vehicle.title }}</h5>
-            <div class="card-body">
-                <h5 class="card-title">
-                    Ready?: {{ vehicle.ready }}
-                </h5>
-                <p class="card-text">
-                    Body: {{ vehicle.body }}
-                </p>
-                <p class="card-text">
-                    Amount: {{ vehicle.amount }}
-                </p>
-                <a href="/vehicles/{{ vehicle.id }}" class="btn btn-info">
-                    View {{ vehicle.title }}
-                </a>
+    <!-- we need to account for two conditions here -->
+    <!-- first, if we have vehicles in our array -->
+    <!-- second, if there are no vehciles in the array -->
+    {% if vehicles.length > 0 %}
+        <div class="container-md">
+            <h2>All Vehicles</h2>
+            <div class="row">
+                {% for vehicle in vehicles %}
+                 
+                {% endfor %}
             </div>
         </div>
-        {% endfor %}
-    </div>
-</div>
+    {% else %}
+        <div class="container-md">
+            <h2>Currently vehicle in inventory</h2>
+        </div>
+    {% endif %}
 {% endblock %}
