--- a/views/vehicles/new.liquid
+++ b/views/vehicles/new.liquid
@@ -4,30 +4,30 @@
     <form action="/vehicles" method="POST">
         <fieldset>
             <legend>Create New Vehicle</legend>
-            <label class="form-label">Title: </label>
+            <label class="form-label">Year: </label>
             <input 
                 type="text" 
-                name="title" 
-                placeholder="enter vehicle title"
+                name="year" 
+                placeholder="enter vehicle year"
                 class="form-control"
             >
-            <label class="form-label">Body:</label>
+            <label class="form-label">Make:</label>
             <input 
                 type="text" 
-                name="body" 
-                placeholder="enter vehicle body" 
+                name="make" 
+                placeholder="enter vehicle make" 
                 class="form-control"
             >
-            <label class="form-label">Amount:</label>
+            <label class="form-label">Model:</label>
             <input 
                 type="number" 
-                name="amount" 
+                name="model" 
                 class="form-control"
             >
-            <label class="form-label">Ready:</label>
+            <label class="form-label">Favorite:</label>
             <input 
                 type="checkbox" 
-                name="ready" 
+                name="favorite" 
                 class="form-check-input"
             >
         </fieldset>
