--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -6,47 +6,140 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- link in bootstrap stylesheet from the CDN-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <!-- Link in my CSS -->
-        <link rel="stylesheet" href="/styles.css" />
+
         <title>SAH Motors</title>
     </head>
     <body>
         <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">SAH Motors</a>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <div class="container">
+                <a class="navbar-brand" href="#">SAH MOTORS</a>
                 <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collaps"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                    >
-                    <span class="navbar-toggler-icon"></span>
-                    
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        id="navbarDropdown"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                      >
+                        Sign in
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Sign In</a></li>
+                        <li><a class="dropdown-item" href="#">Create an account</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li>
+                          <a class="dropdown-item" href="#">Log Out</a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <form class="d-flex">
+                    <input
+                      class="form-control me-2"
+                      type="search"
+                      placeholder="Search"
+                      aria-label="Search"
+                    />
+                    <button class="btn btn-outline-success" type="submit">
+                      Search
                     </button>
-
-
-
-
-            </div>
-        </header>
-            <main class="my-5"></main>
-            <div class="container">
-                <div clss="row">
-                    <div class="col-md-7">
-                        <img src="https://i.imgur.com/Sdz8BS6.jpg" alt="Mustang Convertible Photo" class="img-fluid"/>
-                    </div>
-                    <div class="col-md-5">
-                        <h1 class="mt-5">SAH Motors</h1>
-                        <p class="mt-4"> Welcome to SAH Motors! Make your rental vehicel a part of your vacation experience!
-
-                        </p>
-                        
-                        </div>
+                  </form>
                 </div>
+              </div>
+            </nav>
+          </header>
+
+          <main class="my-5">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-7">
+                  <img
+                    src="https://i.imgur.com/Vf457AA.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="col-md-5">
+                  <h1 class="mt-5">SAH Motors</h1>
+                  <p class="mt-4">
+                    You have practicle at home, why rent it on vacation?
+                  </p>
+                  <button type="button" class="btn btn-primary mt-3">
+                    View vehicles
+                  </button>
+                </div>
+              </div>
+              
+              <div class="row my-5">
+                <div class="col">
+                  <div class="card-group">
+                    <div class="card">
+                      <img
+                        src="https://imgur.com/a/c8pHT2v"
+                        class="card-img-top"
+                        alt="girls in Jeep"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">
+                          "We had an AH-mazing time exploring Sedona in the Jeep! Thank you, Aaron and Roxanne!! - Kandyse"
+                        </p>
+      
+                      
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img
+                        src=""
+                        class="card-img-top"
+                        alt="Birthday at the grand canyon"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">
+                          My wife always wanted to see the Grand Canyon. This convertible Mustang was the cherry on top!
+                        </p>
+      
+                      
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img
+                        src=""
+                        class="card-img-top"
+                        alt="Having fun in the Vette!"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">
+                          The most amazing car I have ever driven!
+                        </p>
+      
+                       
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="text-center">
 
         <!-- link in our bootstrap scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
