--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -27,6 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <a href="/vehicles/new" class="nav-link text-light me-3">create vehicle</a>
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -41,27 +42,18 @@
                       >
                         Sign in
                       </a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Sign In</a></li>
-                        <li><a class="dropdown-item" href="#">Create an account</a></li>
+                      <ul class="dropdown-menu me-2" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="views/users/login.liquid">Sign In</a></li>
+                        <li><a class="dropdown-item" href="views/users/signup.liquid">Create an account</a></li>
+                        <li><a class="dropdown-item nav-link" href="views/vehicles/new.liquid">Create vehicle</a></li>
                         <li><hr class="dropdown-divider" /></li>
                         <li>
-                          <a class="dropdown-item" href="#">Log Out</a>
+                          <a class="dropdown-item" href="views/users/logout.liquid">Log Out</a>
                         </li>
                       </ul>
                     </li>
                   </ul>
-                  <form class="d-flex">
-                    <input
-                      class="form-control me-2"
-                      type="search"
-                      placeholder="Search"
-                      aria-label="Search"
-                    />
-                    <button class="btn btn-outline-success" type="submit">
-                      Search
-                    </button>
-                  </form>
+                  
                 </div>
               </div>
             </nav>
@@ -93,7 +85,7 @@
                   <div class="card-group">
                     <div class="card">
                       <img
-                        src="https://imgur.com/a/c8pHT2v"
+                        src="images/Kandyse  - Jeep.png"
                         class="card-img-top"
                         alt="girls in Jeep"
                       />
@@ -108,7 +100,7 @@
                     </div>
                     <div class="card">
                       <img
-                        src=""
+                        src="https://i.imgur.com/Sdz8BS6.jpg"
                         class="card-img-top"
                         alt="Birthday at the grand canyon"
                       />
