--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -85,7 +85,7 @@
                   <div class="card-group">
                     <div class="card">
                       <img
-                        src="images/Kandyse  - Jeep.png"
+                        src=""
                         class="card-img-top"
                         alt="girls in Jeep"
                       />
