--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -72,7 +72,7 @@
                 <div class="col-md-5">
                   <h1 class="mt-5">SAH Motors</h1>
                   <p class="mt-4">
-                    You have practicle at home, why rent it on vacation?
+                    You have "practical" at home, why rent it on vacation?
                   </p>
                   <button type="button" class="btn btn-primary mt-3">
                     View vehicles
