--- a/views/users/signup.liquid
+++ b/views/users/signup.liquid
@@ -9,7 +9,7 @@
         {%- endcomment -%}
         <form action="/users/signup" method="POST">
             <fieldset>
-                <legend>Sign Up for an Account</legend>
+                <legend>Sign Up for a Host Account</legend>
                 <label class="form-label">Username:</label>
                 {%- comment -%}
                 form inputs need a type(think data type) and a name(think object key) so if we use type: String and require req.body.username, our form input will look like the one below.
