--- a/views/vehicles/new.liquid
+++ b/views/vehicles/new.liquid
@@ -6,7 +6,7 @@
             <legend>Create New Vehicle</legend>
             <label class="form-label">Year: </label>
             <input 
-                type="text" 
+                type="number" 
                 name="year" 
                 placeholder="enter vehicle year"
                 class="form-control"
@@ -20,11 +20,17 @@
             >
             <label class="form-label">Model:</label>
             <input 
-                type="number" 
+                type="text" 
                 name="model" 
                 class="form-control"
             >
-            <label class="form-label">Favorite:</label>
+            <label class="form-label">Image:</label>
+            <input 
+                type="text" 
+                name="image" 
+                class="form-control"
+            >
+           
             <input 
                 type="checkbox" 
                 name="favorite" 
