--- a/views/vehicles/edit.liquid
+++ b/views/vehicles/edit.liquid
@@ -1,43 +1,53 @@
 {% layout 'layout.liquid' %}
 {% block content %}
 <div class="container-sm">
-    <form action="/vehicles?_method=PUT" method="POST">
+    <form action="/vehicles/{{vehicle.id}}?_method=PUT" method="POST">
         <fieldset>
-            <legend>Create New Vehicle</legend>
-            <label class="form-label">Title: </label>
-            <input 
-                type="text" 
-                name="title" 
-                placeholder="{{ vehicle.title }}"
-                value="{{ vehicle.title }}"
-                class="form-control"
-            >
-            <label class="form-label">Body:</label>
-            <input 
-                type="text" 
-                name="body" 
-                placeholder="{{ vehicle.body }}" 
-                value="{{ vehicle.body }}" 
-                class="form-control"
-            >
-            <label class="form-label">Amount:</label>
+            <legend>Edit {{vehicle.name}}</legend>
+            <label class="form-label">Year: </label>
             <input 
                 type="number" 
-                name="amount"
-                value="{{ vehicle.amount }}"
-                class="form-control"
+                name="year" 
+                placeholder="Vehicle year?"
+                required value="{{ vehicle.year }}"
+        
             >
-            <label class="form-label">Ready:</label>
+            <label class="form-label">Make:</label>
+            <input 
+                type="text" 
+                name="make" 
+                placeholder="Vehicle make?" 
+                required value="{{ vehicle.body }}" 
+        
+            >
+            <label class="form-label">Model:</label>
+            <input 
+                type="text" 
+                name="model"
+                placeholder="Vehicle model?"
+                required value="{{ vehicle.model }}"
+                
+            >
+            >
+            <label class="form-label">Image:</label>
+            <input 
+                type="text" 
+                name="image" 
+                placeholder="Vehicle Photo"
+                required value="{{vehicle.image}}"
+            >
+            <label class="form-label">Favorite:</label>
             <input 
                 type="checkbox" 
-                name="ready" 
+                name="favorite" 
                 class="form-check-input"
                 {% if vehicle.ready %}
                     checked
                 {% endif %}
             >
         </fieldset>
-        <input type="submit" value="Edit Vehicle" class="btn btn-success">
+        <input type="submit" value="Edit {{vehicle.name}}" class="btn btn-success">
+        <a href="/vehicles/{{vehicle.id}}" class="btn btn-warning">Back</a>
     </form>
 </div>
 {% endblock %}
