--- a/views/vehicles/show.liquid
+++ b/views/vehicles/show.liquid
@@ -1,6 +1,13 @@
 {% layout 'layout.liquid' %}
 {% block content %}
+
+
+
 <div class="container-md">
+    <img src="{{vehicle.image}}" class="card-img" alt="Jeep in Sedona">
+
+
+
     <article>
         <h2>
             {{ vehicle.year }} 
@@ -10,12 +17,52 @@
         {% if vehicle.owner == userId %}
         <div class="btn-group">
 
-            <a href="/vehicles/{{ vehicle.id }}/edit" class="btn btn-primary">Edit</a>
+
+
+
+            <a href="/vehicles//edit/{{ vehicle.id }}" class="btn btn-primary">Edit{{vehicle.name}}</a>
             <form action="/vehicles/{{ vehicle.id }}?_method=DELETE" method="POST">
-                <input type="submit" value="Delete" class="btn btn-danger">
+                <input type="submit" value="Delete {{vehicle.name}}" class="btn btn-danger">
             </form>
         </div>
         {% endif %}
     </article>
+    <hr>
+    <h4>comments</h4>
+    <hr>
+    {% if loggedIn %}
+        <div class="col-md-6">
+            <form action="/comments/{{ vehicle.id }}" method="POST">
+                <fieldset>
+                    <legend>Add Comment</legend>
+                    <label class="form-label">comment: </label>
+                    <input type="text" name="note" class="form-control mb-1">
+                </fieldset>
+                <input type="submit" class="btn btn-success" value="add comment">
+            </form>
+        </div>
+    {% else %}
+        <div class="col-md-6">
+            <small>If you'd like to leave a comment, please log in...</small>
+        </div>
+    {% endif %}
+    <hr>
+    {% if vehicle.comments.length > 0 %}
+        <div class="container-sm justify-content-center">
+            {% for comm in vehicle.comments %}
+                {% render '../comment.liquid', comm: comm, userId: userId, vehicle: vehicle %}
+            {% endfor %}
+        </div>
+    {% else %}
+        <small>no comments yet...</small>
+    {% endif %}
+
+
+
+
+
+
 </div>
+
+
 {% endblock %}
