update to home screen

--- a/views/home.liquid
+++ b/views/home.liquid
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-md-7">
           <img
-            src="https://i.imgur.com/Vf457AA.jpg"
+            src="https://i.imgur.com/I5xKQqv.png"
             alt=""
             class="img-fluid"
           />
