--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -90,7 +90,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Chevrolet Corvette</h5>
                   <p class="card-text">
-                    "Perfect ride, when you have only 10 minutes to grab some donuts!" - Donut Guy!
+                    "Perfect ride, when you only have 10 minutes to grab some donuts!" - Donut Guy!
                   </p>
 
                  
