Moved reviews to home only.

--- a/views/home.liquid
+++ b/views/home.liquid
@@ -6,14 +6,14 @@
         <div class="col-md-7">
           <img
             src="https://i.imgur.com/I5xKQqv.png"
-            alt=""
-            class="img-fluid"
+            alt="Jeep in Sedona"
+            class="img-fluid object-fit-cover border rounded"
           />
         </div>
         <div class="col-md-5">
           <h1 class="mt-5">SAH Motors</h1>
-          <p class="mt-4">
-            You have "practical" at home, why rent it on vacation?
+          <p class="lead mt-4">
+            <strong>You have <em>"practical"</em> at home... why rent it on vacation?</strong>
           </p>
           <button type="button" class="btn btn-primary mt-3">
             <a href="/vehicles" class="nav-link btn mt-6">All Vehicles</a>
@@ -21,5 +21,58 @@
           </button>
         </div>
       </div>
+
+      <div class="row my-5" style="">
+          <div class="col">
+            <div class="card-group grid gap-3">
+              <div class="card">
+              
+                <img
+                  src="https://i.imgur.com/zfL4sBN.jpg"
+                  class="card-img-top img-thumbnail"
+                  alt="girls in Jeep"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Jeep Wrangler Unlimited</h5>
+                  <p class="card-text">
+                    "We had an AH-mazing time exploring Sedona in the Jeep! Thank you, Aaron and Roxanne!!"" - Kandyse
+                  </p>
+
+                
+                </div>
+              </div>
+              <div class="card">
+                <img
+                  src="https://i.imgur.com/gjZgvkD.jpg"
+                  class="card-img-top img-thumbnail"
+                  alt="Birthday at the grand canyon"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Ford Mustang</h5>
+                  <p class="card-text">
+                    "Celebrating her 50th birthday at the Grand Canyon. This convertible Mustang was the cherry on top!"" - Danny
+                  </p>
+
+                
+                </div>
+              </div>
+              <div class="card">
+                <img
+                  src="https://i.imgur.com/2RWlkE8.jpg"
+                  class="card-img-top img-thumbnail"
+                  alt="Perfect ride, when you have only 10 minutes to grab some doughnuts!"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Chevrolet Corvette</h5>
+                  <p class="card-text">
+                    "Perfect ride, when you only have 10 minutes to grab some donuts!" - Donut Guy!
+                  </p>
+
+                 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 {% endblock %}
 
