--- a/views/users/logout.liquid
+++ b/views/users/logout.liquid
@@ -1,10 +1,10 @@
 {% layout 'layout.liquid' %}
 {% block content %}
-    <div class="container-md">
-        <img src="https://i.imgur.com/Q6mU9r4.jpg" width 100>
+    <div class="container-lg">
+        <img src="https://i.imgur.com/Q6mU9r4.jpg" class="img-fluid img-thumbnail rounded">
         <h2>Are you sure you would like to log out?</h2>
-        <div class="btn-group">
-            <a href="/" class="btn btn-warning me-3">No, back to home page</a>
+        <div class="btn-group mx-auto">
+            <a href="/" class="btn btn-warning me-3 ">No, back to home page</a>
 
             <form action="/users/logout?_method=DELETE" method="POST">
                 <input type="submit" class="btn btn-danger" value="Yes, log me out">
