Added live booking links to Turo

--- a/views/home.liquid
+++ b/views/home.liquid
@@ -65,7 +65,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Chevrolet Corvette</h5>
                   <p class="card-text">
-                    "Perfect ride, when you only have 10 minutes to grab some donuts!" - Donut Guy!
+                    "Perfect ride, when you only have 10 minutes to grab some donuts!" - Timm "Donut Guy"!
                   </p>
 
                  
