--- a/views/vehicles/edit.liquid
+++ b/views/vehicles/edit.liquid
@@ -28,6 +28,17 @@
                 required value="{{ vehicle.model }}"
                 
             >
+
+            <label class="form-label">Book:</label>
+            <input 
+                type="text" 
+                name="book"
+                placeholder="booking url"
+                required value="{{ vehicle.book }}"
+                
+            >
+
+
             >
             <label class="form-label">Image:</label>
             <input 
@@ -36,6 +47,8 @@
                 placeholder="Vehicle Photo"
                 required value="{{vehicle.image}}"
             >
+            
+          
             <label class="form-label">Favorite:</label>
             <input 
                 type="checkbox" 
