--- a/views/vehicles/index.liquid
+++ b/views/vehicles/index.liquid
@@ -15,7 +15,7 @@
                         <div class="card-body">
                             <h5 class="card-title"></h5>
                      
-                            <a href="https://turo.com/us/en/truck-rental/united-states/phoenix-az/ford/super-duty-f-250/1140804?endDate=02%2F04%2F2023&endTime=10%3A00&startDate=02%2F01%2F2023&startTime=10%3A00" class="btn btn-info">Book Now {{vehicle.name}}</a>
+                            <a href="{{vehicle.book}}" class="btn btn-info">Book Now {{vehicle.name}}</a>
                             <a href="/vehicles/{{vehicle.id}}" class="btn btn-info">View {{vehicle.name}}</a>
                         </div>
                     </div>
