--- a/views/vehicles/new.liquid
+++ b/views/vehicles/new.liquid
@@ -24,13 +24,22 @@
                 name="model" 
                 class="form-control"
             >
+
+            <label class="form-label">Book:</label>
+            <input 
+                type="text" 
+                name="book" 
+                placeholder="reservation link" 
+                class="form-control"
+            >
+
             <label class="form-label">Image:</label>
             <input 
                 type="text" 
                 name="image" 
                 class="form-control"
-            >
-           
+            >     
+            
             <input 
                 type="checkbox" 
                 name="favorite" 
