adding keywords for search function

--- a/views/vehicles/new.liquid
+++ b/views/vehicles/new.liquid
@@ -33,6 +33,15 @@
                 class="form-control"
             >
 
+            <label class="form-label">Keyword:</label>
+            <input 
+                type="text" 
+                name="keyword" 
+                placeholder="keywords" 
+                class="form-control"
+            >
+
+
             <label class="form-label">Image:</label>
             <input 
                 type="text" 
