--- a/views/vehicles/edit.liquid
+++ b/views/vehicles/edit.liquid
@@ -38,6 +38,14 @@
                 
             >
 
+            <label class="form-label">Keyword:</label>
+            <input 
+                type="text" 
+                name="keyword"
+                placeholder="keywords"
+                required value="{{ vehicle.keyword }}"
+                
+            >
 
             >
             <label class="form-label">Image:</label>
