--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -12,8 +12,9 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <div class="container-fluid">
+            <div class="container">
                 <a href="/" class="navbar-brand">SAH Motors</a>
+
                 {% if loggedIn %}
                     <a href="/vehicles/mine" class="nav-link text-warning me-3">Hello {{username}}</a>
                 {% endif %}
@@ -21,16 +22,66 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    {% if loggedIn %}
-                      
-                        <a href="/vehicles/new" class="nav-link text-light me-3">New Vehicle</a>
-                        <a href="/users/logout" class="nav-link text-light me-3">Log Out</a>
-                    {% else %}
-                       
-                        <a href="/users/signup" class="nav-link text-light me-3">Sign Up</a>
-                        <a href="/users/login" class="nav-link text-light me-3">Log In</a>
-                    {% endif %}
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      {% if loggedIn %}
+                        
+                          <a href="/vehicles/new" class="nav-link text-light me-3">List New Vehicle</a>
+                        
+                                          
+  
+                      {% endif %}
+
+
+
+
+
+                   
+                    <li class="nav-item dropdown">
+                      <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        id="navbarDropdown"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                      >
+                        Sign In
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="/users/login">Sign In</a></li>
+                        <li><a class="dropdown-item" href="/users/signup">Sign up</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li>
+                          <a class="dropdown-item" href="/users/logout">Sign Out</a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <form class="d-flex">
+                    <input
+                      class="form-control me-2"
+                      type="search"
+                      placeholder="Search"
+                      aria-label="Search"
+                    />
+                    <button class="btn btn-outline-success" type="submit">
+                      Search
+                    </button>
+                  </form>
                 </div>
+
+
+
+
+              
+                
             </div>
         </nav>
 
@@ -44,6 +95,15 @@
                 default content
             {% endblock %}
         </main>
+
+
+
+
+        
+
+
+
+
 
 
 
