--- a/views/vehicles/edit.liquid
+++ b/views/vehicles/edit.liquid
@@ -1,6 +1,8 @@
 {% layout 'layout.liquid' %}
 {% block content %}
-<div class="container-sm">
+<div class="container-md">
+    <div class="row">
+        <div class=""col>
     <form action="/vehicles/{{vehicle.id}}?_method=PUT" method="POST">
         <fieldset>
             <legend>Edit {{vehicle.name}}</legend>
@@ -70,5 +72,7 @@
         <input type="submit" value="Edit {{vehicle.name}}" class="btn btn-success">
         <a href="/vehicles/{{vehicle.id}}" class="btn btn-warning">Back</a>
     </form>
+    </div>
+    </div>
 </div>
 {% endblock %}
