--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -62,7 +62,7 @@
                       placeholder="Search"
                       aria-label="Search"
                     />
-                    <button class="btn btn-outline-success" type="submit">
+                    <button class="btn btn-outline-success" href="" type="submit">
                       Search
                     </button>
                   </form>
