--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -58,7 +58,7 @@
                   <form class="d-flex">
                     <input
                       class="form-control me-2"
-                      type="search"
+                      type="Search"
                       placeholder="Search"
                       aria-label="Search"
                     />
