--- a/views/vehicles/show.liquid
+++ b/views/vehicles/show.liquid
@@ -4,7 +4,7 @@
 
 
 <div class="container-md">
-    <img src="{{vehicle.image}}" class="card-img" alt="Jeep in Sedona">
+    <img src="{{vehicle.image}}" class="card-img" alt="">
 
 
 
