--- a/views/vehicles/show.liquid
+++ b/views/vehicles/show.liquid
@@ -54,7 +54,7 @@
             {% endfor %}
         </div>
     {% else %}
-        <small>no comments yet...</small>
+        <small>Be the first to leave a comment.</small>
     {% endif %}
 
 
